# anysecrets

./: .env.example  .pre-commit-config.yaml  Makefile  README.md  docker-compose-prod.yml  docker-compose.yml  pyproject.toml
app/: config.py  exceptions.py  main.py  service.py
app/auth/: auth_router.py  backends.py  config.py  dependencies.py  manager.py  models.py  schemas.py
app/base/: models.py  repository.py  schemas.py  specification.py
app/db/: dependencies.py  models.py  repository.py  uow.py
app/passwords/: dependencies.py  exceptions.py  models.py  repositories.py  router.py  schemas.py  service.py
app/security/: config.py
backend/: config.py  cors.py  main.py  routing.py  service.py
backend/auth/: auth_router.py  backends.py  config.py  dependencies.py  manager.py  models.py  schemas.py  user_router.py
backend/base/: models.py  repository.py  schemas.py  specification.py
backend/db/: config.py  connection.py  dependencies.py  models.py  repository.py  uow.py
backend/passwords/: dependencies.py  models.py  repositories.py  router.py  schemas.py  service.py
backend/security/: config.py
docker/: backend.Dockerfile  entrypoint.sh  fastapi.Dockerfile  frontend.Dockerfile
frontend/: __init__.py  client.py  config.py  main.py  schemas.py
frontend/auth/: client.py  dependencies.py  exceptions.py  router.py  schemas.py
frontend/passwords/: client.py  dependencies.py  router.py  schemas.py
frontend/users/: router.py
migrations/: env.py
migrations/versions/: 2025_02_20_1700-5530b2f95483_.py
static/css/: base.css
templates/: base.html
(+38 files in other folders)
